Fix nav on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  @apply bg-gray-200 text-gray-700 dark:bg-gray-900 dark:text-gray-300;
+}
 .card {
   @apply rounded-lg bg-gray-100 p-px shadow-lg dark:bg-gray-800 dark:shadow-black/20;
 }
